--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-gyp": "^4.0.0",
+    "nyc": "^14.1.1",
+    "opencv4nodejs": "^4.17.0"
   }
 }
